# rust-layers

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_start.sh
.github/workflows/: ci.yml  release.yml  security.yml
crates/adapters/: Cargo.toml
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
git/: merge_template.sh
github/workflows/: ci.yml
