[package]
name = "rust-lib"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace.lints.clippy]
# Enforce correctness and best practices
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
# Strict: pedantic + nursery for consistency and future-proofing
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Safety restrictionscore/src/entities
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Documentation discipline
missing_docs = "warn"
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
# Project-specific overrides
needless_return = "allow" # stylistic choice

unsafe_code = "forbid"
